# Img2Video

./: .gitignore  CMakeLists.txt  README.md
include/: Img2Video.hpp
src/: AbstractConverterFrame.cpp  AbstractConverterFrame.h  ConverterFrame.cpp  ConverterFrame.hpp  Img2Unix.cpp  Img2Video.fbp  Img2Windows.cpp  Main.cpp  main.cpp
src/UI/: AbstractConverterFrame.cpp  AbstractConverterFrame.h  ConverterFrame.cpp  ConverterFrame.hpp  Img2Video.fbp
src/Worker/: ProcessHandler.cpp  ProcessHandler.hpp  ProgressServer.cpp  ProgressServer.hpp
